--- a/src/app/components/mqtt-device/mqtt-device.component.html
+++ b/src/app/components/mqtt-device/mqtt-device.component.html
@@ -11,13 +11,26 @@
     </span>
     <span> ({{ (deviceState$ | async) ? 'Online' : 'Offline' }}) </span>
   </mat-card-subtitle>
-  <mat-card-actions align="start">
-    <button mat-raised-button [routerLink]="['/mqtt-connections']">
-      <mat-icon>
-        cast-connected
-      </mat-icon>
-      <span>
-        Select Another Device
+  <mat-card-actions align="start" fxLayout>
+    <button
+      mat-raised-button
+      color="primary"
+      [routerLink]="['/mqtt-connections']"
+    >
+      <mat-icon>cast-connected</mat-icon>
+      <span fxHide.lt-sm>
+        Select Device
+      </span>
+    </button>
+    <button
+      mat-raised-button
+      color="accent"
+      (click)="openMqttDeviceSettingsDialog()"
+      [disabled]="!(deviceState$ | async)"
+    >
+      <mat-icon>router-wireless-settings</mat-icon>
+      <span fxHide.lt-sm>
+        Settings
       </span>
     </button>
   </mat-card-actions>
@@ -158,7 +171,7 @@
           </mat-grid-tile>
         </mat-grid-list>
       </mat-tab>
-      <mat-tab label="Settings">
+      <!-- <mat-tab label="Settings">
         <mat-accordion>
           <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -262,7 +275,7 @@
             </div>
           </mat-expansion-panel>
         </mat-accordion>
-      </mat-tab>
+      </mat-tab> -->
     </mat-tab-group>
   </mat-card-content>
 </mat-card>
