--- a/src/app/components/mqtt-device/mqtt-device.component.html
+++ b/src/app/components/mqtt-device/mqtt-device.component.html
@@ -16,7 +16,7 @@
     >
       <mat-icon>cast-connected</mat-icon>
       <span fxHide.lt-sm>
-        Select Device
+        Manage Devices
       </span>
     </button>
     <button
@@ -26,7 +26,7 @@
     >
       <mat-icon>router-wireless-settings</mat-icon>
       <span fxHide.lt-sm>
-        Settings
+        Device Settings
       </span>
     </button>
   </mat-card-actions>
