change resistance to 44 Ohm

--- a/src/app/components/mqtt-device/mqtt-device.component.html
+++ b/src/app/components/mqtt-device/mqtt-device.component.html
@@ -48,7 +48,7 @@
             <ngx-charts-gauge
               [results]="latestDepth$ | async"
               [min]="0"
-              [max]="referenceDepth.value"
+              [max]="maxDepth.value"
               units="m"
             >
             </ngx-charts-gauge>
