--- a/src/app/components/mqtt-device/mqtt-device.component.html
+++ b/src/app/components/mqtt-device/mqtt-device.component.html
@@ -167,7 +167,7 @@
           </mat-grid-tile>
         </mat-grid-list>
       </mat-tab>
-      <!-- <mat-tab label="Settings">
+      <mat-tab label="Settings">
         <mat-accordion>
           <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -271,7 +271,7 @@
             </div>
           </mat-expansion-panel>
         </mat-accordion>
-      </mat-tab> -->
+      </mat-tab>
     </mat-tab-group>
   </mat-card-content>
 </mat-card>
